Resolved LOGIN issue

--- a/dashboard/public/index.html
+++ b/dashboard/public/index.html
@@ -2,17 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#0f172a" />
-    <meta name="description" content="GreenOps - Green IT Infrastructure Monitoring" />
+    <meta name="theme-color" content="#0e0e0e" />
+    <meta name="description" content="GreenOps - Machine Monitoring & Energy Optimization" />
     <title>GreenOps</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>You need to enable JavaScript to run GreenOps.</noscript>
     <div id="root"></div>
   </body>
 </html>
